added noserunner for test fixed to keep pep8 coding style

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,5 @@ eggs = ikazuchi
 interpreter = py
 
 [test]
-recipe = zc.recipe.egg
-eggs = pikzie
-#eggs = ikazuchi[test]
+recipe = pbp.recipe.noserunner
+eggs = ikazuchi[test]
