changed to add "--verbosity=3" and "--with-doctest" as default option for nose

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,5 @@
 [buildout]
 parts = ikazuchi test
-
 develop = .
 
 [ikazuchi]
@@ -10,4 +9,11 @@ interpreter = py
 
 [test]
 recipe = pbp.recipe.noserunner
-eggs = ikazuchi[test]
+eggs =
+    nose
+    pep8
+    minimock
+    ikazuchi [test]
+defaults =
+    --verbosity=3
+    --with-doctest
