updated the version 0.4.0 to 0.4.1

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,5 @@ include buildout.cfg
 include bootstrap.py
 include MANIFEST.in
 include LICENSE
-recursive-include examples *.po *.rst
+recursive-include examples *.conf *.po *.rst
 recursive-include src *.py *.txt
